# radar-marca

./: .gitignore  CHANGELOG.md  CNAME  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: saas-mvp.md
examples/: brands.json
site/: 404.html  CNAME  app.html  app.js  demo.html  index.html  interest.html  styles.css
src/radar_marca/: __init__.py  cli.py  domain_generator.py  history.py  models.py  report.py  resolvers.py  scan.py  scorer.py  sources.py  storage.py  webapp.py
supabase/: README.md  schema.sql
tests/: test_domain_generator.py  test_history.py  test_report.py  test_scan.py  test_scorer.py  test_sources.py  test_storage.py  test_webapp.py
